[WNC-4, WNC-5] Migration for account, API for internal transfer, API get for transfer fee
